Finished resolving spacing issues and checked to make sure page met lab specifications.

--- a/css/main.css
+++ b/css/main.css
@@ -56,3 +56,7 @@ figure {
 #prices {
     margin-top: 15px;
 }
+
+figcaption {
+    font-size: 50px;
+}
